monitoring/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: eje-monitoring
  labels:
    name: eje-monitoring
    purpose: observability
